Wireframe not updating after applying subsurf #67888

Closed
opened 2019-07-29 17:59:05 +02:00 by Zachary · 15 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-26 09:51, hash: 62338abde4
Worked: 2.79 official release

Short description of error
Wireframe doesn't update in viewport after applying subsurf with optimal display enabled.

Exact steps for others to reproduce the error
1: Add suburf modifier to default cube
2: Make viewport setting to like 4
3: Enable wireframe and all edges
4: Enable "Optimal Display" on subsurf modifier
5: Apply modifier

Can enter edit mode and then back to object mode to update wireframe.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-26 09:51, hash: `62338abde4` Worked: 2.79 official release **Short description of error** Wireframe doesn't update in viewport after applying subsurf with optimal display enabled. **Exact steps for others to reproduce the error** 1: Add suburf modifier to default cube 2: Make viewport setting to like 4 3: Enable wireframe and all edges 4: Enable "Optimal Display" on subsurf modifier 5: Apply modifier Can enter edit mode and then back to object mode to update wireframe.
Author

Added subscriber: @AFWS

Added subscriber: @AFWS

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I made a test file:
cube_wireframe.blend

I made a test file: [cube_wireframe.blend](https://archive.blender.org/developer/F7637262/cube_wireframe.blend)

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Confirmed on current master (03f652b2c1).

I tried adding WM_event_add_notifier(C, NC_GEOM | ND_DATA, ob->data); and DEG_id_tag_update((ID *)ob->data, ID_RECALC_GEOMETRY); to the modifier_apply_exec() function, but that didn't solve it. You can even switch between Rendered/Solid/LookDev/Wireframe, or enable/disable drawing of overlays, and it'll still keep drawing the "Optimal Display" subdivision view.

Confirmed on current master (03f652b2c1fc7de685185190ff95bdd240540388). I tried adding `WM_event_add_notifier(C, NC_GEOM | ND_DATA, ob->data);` and `DEG_id_tag_update((ID *)ob->data, ID_RECALC_GEOMETRY);` to the `modifier_apply_exec()` function, but that didn't solve it. You can even switch between Rendered/Solid/LookDev/Wireframe, or enable/disable drawing of overlays, and it'll still keep drawing the "Optimal Display" subdivision view.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'
Member

@dr.sybren , @AFWS is this still an issue? Or should we close this one.

@dr.sybren , @AFWS is this still an issue? Or should we close this one.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Yup, still an issue.

Yup, still an issue.

Added subscriber: @RyanJEC

Added subscriber: @RyanJEC

Wireframe overlay doesn't apply to Subdiv if added right after mirror modifier either.

  1. Mirror Modifier (Clipping)
  2. Subdiv Modifier

You can put Subdiv first to get the Wireframe, but then mirror clipping doesn't work because mirror has to be first.

This may not be related, if not I'll make a new bug task.

Wireframe overlay doesn't apply to Subdiv if added right after mirror modifier either. 1. Mirror Modifier (Clipping) 2. Subdiv Modifier You can put Subdiv first to get the Wireframe, but then mirror clipping doesn't work because mirror has to be first. This may not be related, if not I'll make a new bug task.
Jeroen Bakker self-assigned this 2020-03-17 15:25:02 +01:00
Member

The control edges are provided by subsurf modifier and stored in the mesh. During drawing the draw engine still sees and uses the data.

Solution would be to clean up these control data after applying the subsurf modifier so the base mesh doesn't have the data.

The control edges are provided by subsurf modifier and stored in the mesh. During drawing the draw engine still sees and uses the data. Solution would be to clean up these control data after applying the subsurf modifier so the base mesh doesn't have the data.

This issue was referenced by 7ed3ebbc6e

This issue was referenced by 7ed3ebbc6e1f95203c050e683a140b7ac1e7b705
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67888
No description provided.