source/blender/blenkernel/intern/multires_subdiv.c
@@ -50,9 +50,11 @@ void BKE_multires_subdiv_mesh_settings_init(SubdivToMeshSettings *mesh_settings,
                                             const Object *object,
                                             const MultiresModifierData *mmd,
                                             const bool use_render_params,
-                                            const bool ignore_simplify)
+                                            const bool ignore_simplify,
+                                            const bool ignore_control_edges)
 {
   const int level = multires_get_level(scene, object, mmd, use_render_params, ignore_simplify);
   mesh_settings->resolution = (1 << level) + 1;
-  mesh_settings->use_optimal_display = (mmd->flags & eMultiresModifierFlag_ControlEdges);
+  mesh_settings->use_optimal_display = (mmd->flags & eMultiresModifierFlag_ControlEdges) &&
+                                       !ignore_control_edges;
 }
